--- a/index.html
+++ b/index.html
@@ -8,25 +8,86 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="output.css">
 
-    <title>Document</title>
+    <title>ART ECHO</title>
 </head>
 <body class="bg-slate-100 flex p-10 font-poppins flex-col">
   <div class="container w-11/12 mx-auto">
-    <nav class="border-b flex flex-col-reverse md:flex-row items-center justify-between  mb-20">
+    <nav class="border-b flex flex-col-reverse md:flex-row items-center justify-between mb-10">
       <ul class="flex text-yellow-950">
-        <li class="font-extralight px-5 uppercase cursor-pointer hover:underline">Exhibition</li>
+        <li class="font-extralight px-5 uppercase cursor-pointer hover:underline"><a href="#">Exhibition</a></li>
         <li class="font-extralight px-5 uppercase cursor-pointer hover:underline">life</li>
-        <li class="font-extralight px-5 uppercase cursor-pointer hover:underline">artists</li>
+        <li class="font-extralight px-5 uppercase cursor-pointer hover:underline"><a href="artists.html">artists</a></li>
       </ul>
       <h2 class="text-yellow-950 font-extralight px-5 uppercase text-2xl">art echo</h2>
     </nav>
-    <section class="grid gap-10 md:grid-cols-4">
-      <img src="assets/blur_person.png" alt="" class="self-center rounded-md border border-slate-200 p-1 shadow-2xl">
-      <img src="assets/car_light.png" alt="" class="self-end rounded-md border border-slate-200 p-1 shadow-2xl">
-      <img src="assets/cards.png" alt="" class="rounded-md border border-slate-200 p-1 shadow-2xl">
-      <img src="assets/couple.png" alt="" class="rounded-md border border-slate-200 p-1 shadow-2xl">
+    
+    <section class="overflow-x-auto md:overflow-x-scroll md:overflow-y-hidden py-2 no-scrollbar">
+      <div class="grid gap-4 md:grid-cols-[repeat(10,minmax(250px,1fr))] md:grid-rows-[300px_300px] md:w-[200%] items-start">
+        <div class="self-center flex flex-col">
+          <img src="assets/blur_person.png" alt="" class="rounded-md border border-slate-200 p-1 shadow-lg ">
+        </div>
+        <div class="self-center flex flex-col">
+          <img src="assets/car_light.png" alt="" class="rounded-md border border-slate-200 p-1 shadow-lg ">
+        </div>
+        <div class="self-center flex flex-col">
+          <img src="assets/cards.png" alt="" class="rounded-md border border-slate-200 p-1 shadow-lg ">
+        </div>
+        <div class="self-center flex flex-col">
+          <img src="assets/couple.png" alt="" class="rounded-md border border-slate-200 p-1 shadow-lg">
+        </div>
+        <div class="self-center flex flex-col">
+          <img src="assets/figure.png" alt="" class="rounded-md border border-slate-200 p-1 shadow-lg ">
+        </div>
+        <div class="self-center flex flex-col">
+          <img src="assets/flower.png" alt="" class="rounded-md border border-slate-200 p-1 shadow-lg ">
+        </div>
+        <div class="self-center flex flex-col">
+          <img src="assets/hat.png" alt="" class="rounded-md border border-slate-200 p-1 shadow-lg ">
+        </div>
+        <div class="self-center flex flex-col">
+          <img src="assets/heart.png" alt="" class="rounded-md border border-slate-200 p-1 shadow-lg ">
+        </div>
+        <div class="self-center flex flex-col">
+          <img src="assets/lights.png" alt="" class="rounded-md border border-slate-200 p-1 shadow-lg ">
+        </div>
+        <div class="self-center flex flex-col">
+          <img src="assets/lines.png" alt="" class="rounded-md border border-slate-200 p-1 shadow-lg ">
+        </div>
+        <div class="self-center flex flex-col">
+          <img src="assets/puffball.png" alt="" class="rounded-md border border-slate-200 p-1 shadow-lg ">
+        </div>
+        <div class="self-center flex flex-col">
+          <img src="assets/road.png" alt="" class="rounded-md border border-slate-200 p-1 shadow-lg ">
+        </div>
+        <div class="self-center flex flex-col">
+          <img src="assets/sea.png" alt="" class="rounded-md border border-slate-200 p-1 shadow-lg ">
+        </div>
+        <div class="self-center flex flex-col">
+          <img src="assets/shadows.png" alt="" class="rounded-md border border-slate-200 p-1 shadow-lg ">
+        </div>
+        <div class="self-center flex flex-col">
+          <img src="assets/stairs.png" alt="" class="rounded-md border border-slate-200 p-1 shadow-lg ">
+        </div>
+        <div class="self-center flex flex-col">
+          <img src="assets/sunglasses.png" alt="" class="rounded-md border border-slate-200 p-1 shadow-lg ">
+        </div>
+        <div class="self-center flex flex-col">
+          <img src="assets/swirl.png" alt="" class="rounded-md border border-slate-200 p-1 shadow-lg ">
+        </div>
+        <div class="self-center flex flex-col">
+          <img src="assets/television.png" alt="" class="rounded-md border border-slate-200 p-1 shadow-lg ">
+        </div>
+        <div class="self-center flex flex-col">
+          <img src="assets/two_tone.png" alt="" class="rounded-md border border-slate-200 p-1 shadow-lg ">
+        </div>
+        <div class="self-center flex flex-col">
+          <img src="assets/upwards.png" alt="" class="rounded-md border border-slate-200 p-1 shadow-lg ">
+        </div>
+      </div>
     </section>
+    
+    <footer class="border-b flex flex-col-reverse md:flex-row items-center justify-between mt-20"></footer>
   </div>
-    <!-- <script src="app.js"></script> -->
+    <script src="app.js" type="module"></script>
 </body>
 </html>
