added horizontal/vertcail scroll

--- a/artists.html
+++ b/artists.html
@@ -24,6 +24,6 @@
 
     </section>
   </div>
-    <script src="app.js" type="module"></script>
+    <script src="artists.js" type="module"></script>
 </body>
 </html>
