--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <h2 class="text-yellow-950 font-extralight px-5 uppercase text-2xl">art echo</h2>
     </nav>
     
-    <section class="overflow-x-auto md:overflow-x-scroll md:overflow-y-hidden py-2 no-scrollbar">
+    <section class="overflow-x-auto md:overflow-x-scroll md:overflow-y-hidden py-2 no-scrollbar" id="exhibition-gallery">
       <div class="grid gap-4 md:grid-cols-[repeat(10,minmax(250px,1fr))] md:grid-rows-[300px_300px] md:w-[200%] items-start">
         <div class="self-center flex flex-col">
           <img src="assets/blur_person.png" alt="" class="rounded-md border border-slate-200 p-1 shadow-lg ">
