fixed grid sizing and adding title to grid

--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
       <h2 class="text-yellow-950 font-extralight px-5 uppercase text-2xl">art echo</h2>
     </nav>
     
-    <section class="overflow-x-auto md:overflow-x-scroll md:overflow-y-hidden py-2 no-scrollbar" id="exhibition-gallery">
-      <div class="grid gap-4 md:grid-cols-[repeat(10,minmax(250px,1fr))] md:grid-rows-[300px_300px] md:w-[200%] items-start">
+    <section class="overflow-x-auto md:overflow-x-scroll md:overflow-y-hidden py-4 px-2 no-scrollbar" id="exhibition-gallery">
+      <div class="grid gap-2 md:grid-cols-[repeat(11,minmax(250px,1fr))] md:grid-rows-[320px_320px] md:w-[200%] items-start">
+        <div class="row-span-2 h-full flex items-center justify-center">
+          <h2 class="md:rotate-270 uppercase text-3xl md:text-8xl md:pb-10 font-thin ">exhibition</h2>
+        </div>
         <div class="self-center flex flex-col">
           <img src="assets/blur_person.png" alt="" class="rounded-md border border-slate-200 p-1 shadow-lg ">
         </div>
@@ -32,17 +35,17 @@
         <div class="self-center flex flex-col">
           <img src="assets/cards.png" alt="" class="rounded-md border border-slate-200 p-1 shadow-lg ">
         </div>
-        <div class="self-center flex flex-col">
-          <img src="assets/couple.png" alt="" class="rounded-md border border-slate-200 p-1 shadow-lg">
+        <div class="self-center justify-self-center flex flex-col">
+          <img src="assets/couple.png" alt="" class="rounded-md border border-slate-200 p-1 shadow-lg max-height w-fit ">
         </div>
-        <div class="self-center flex flex-col">
-          <img src="assets/figure.png" alt="" class="rounded-md border border-slate-200 p-1 shadow-lg ">
+        <div class="self-center justify-self-center flex flex-col">
+          <img src="assets/figure.png" alt="" class="rounded-md border border-slate-200 p-1 shadow-lg max-height w-fit">
         </div>
-        <div class="self-center flex flex-col">
-          <img src="assets/flower.png" alt="" class="rounded-md border border-slate-200 p-1 shadow-lg ">
+        <div class="self-center justify-self-center flex flex-col">
+          <img src="assets/flower.png" alt="" class="rounded-md border border-slate-200 p-1 shadow-lg max-height w-fit">
         </div>
-        <div class="self-center flex flex-col">
-          <img src="assets/hat.png" alt="" class="rounded-md border border-slate-200 p-1 shadow-lg ">
+        <div class="self-center justify-self-center flex flex-col">
+          <img src="assets/hat.png" alt="" class="rounded-md border border-slate-200 p-1 shadow-lg max-height w-fit">
         </div>
         <div class="self-center flex flex-col">
           <img src="assets/heart.png" alt="" class="rounded-md border border-slate-200 p-1 shadow-lg ">
@@ -65,20 +68,20 @@
         <div class="self-center flex flex-col">
           <img src="assets/shadows.png" alt="" class="rounded-md border border-slate-200 p-1 shadow-lg ">
         </div>
-        <div class="self-center flex flex-col">
-          <img src="assets/stairs.png" alt="" class="rounded-md border border-slate-200 p-1 shadow-lg ">
+        <div class="self-center justify-self-center flex flex-col">
+          <img src="assets/stairs.png" alt="" class="rounded-md border border-slate-200 p-1 shadow-lg max-height w-fit">
         </div>
         <div class="self-center flex flex-col">
           <img src="assets/sunglasses.png" alt="" class="rounded-md border border-slate-200 p-1 shadow-lg ">
         </div>
-        <div class="self-center flex flex-col">
-          <img src="assets/swirl.png" alt="" class="rounded-md border border-slate-200 p-1 shadow-lg ">
+        <div class="self-center justify-self-center flex flex-col">
+          <img src="assets/swirl.png" alt="" class="rounded-md border border-slate-200 p-1 shadow-lg max-height w-fit">
         </div>
-        <div class="self-center flex flex-col">
-          <img src="assets/television.png" alt="" class="rounded-md border border-slate-200 p-1 shadow-lg ">
+        <div class="self-center justify-self-center flex flex-col">
+          <img src="assets/television.png" alt="" class="rounded-md border border-slate-200 p-1 shadow-lg max-height w-fit">
         </div>
-        <div class="self-center flex flex-col">
-          <img src="assets/two_tone.png" alt="" class="rounded-md border border-slate-200 p-1 shadow-lg ">
+        <div class="self-center justify-self-center flex flex-col">
+          <img src="assets/two_tone.png" alt="" class="rounded-md border border-slate-200 p-1 shadow-lg max-height w-fit">
         </div>
         <div class="self-center flex flex-col">
           <img src="assets/upwards.png" alt="" class="rounded-md border border-slate-200 p-1 shadow-lg ">
@@ -86,7 +89,9 @@
       </div>
     </section>
     
-    <footer class="border-b flex flex-col-reverse md:flex-row items-center justify-between mt-20"></footer>
+    <footer class="border-t flex justify-center mt-8 pt-2">
+      <p class="uppercase font-extralight ">art echo &copy;2025</p>
+    </footer>
   </div>
     <script src="app.js" type="module"></script>
 </body>
