--- a/artists.html
+++ b/artists.html
@@ -12,7 +12,7 @@
 </head>
 <body class="bg-slate-100 flex p-10 font-poppins flex-col">
   <div class="container w-11/12 mx-auto">
-    <nav class="border-b flex flex-col-reverse md:flex-row items-center justify-between mb-20">
+    <nav class="border-b flex flex-col-reverse md:flex-row items-center justify-between mb-10 md:mb-20">
       <ul class="flex text-yellow-950">
         <li class="font-extralight px-5 uppercase cursor-pointer hover:underline"><a href="index.html">Exhibition</a></li>
         <li class="font-extralight px-5 uppercase cursor-pointer hover:underline">life</li>
@@ -21,6 +21,9 @@
       <h2 class="text-yellow-950 font-extralight px-5 uppercase text-2xl">art echo</h2>
     </nav>
     <section id="artist-gallery" class="flex flex-col">
+      <div class="w-10/12 mx-auto md:mb-10">
+        <h2 class="uppercase text-3xl md:text-8xl font-thin text-gray-400">artists</h2>
+      </div>
 
     </section>
   </div>
