--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     
     <section class="overflow-x-auto md:overflow-x-scroll md:overflow-y-hidden py-4 px-2 no-scrollbar" id="exhibition-gallery">
       <div class="grid gap-2 md:grid-cols-[repeat(11,minmax(250px,1fr))] md:grid-rows-[320px_320px] md:w-[200%] items-start">
-        <div class="row-span-2 h-full flex items-center justify-center">
-          <h2 class="md:rotate-270 uppercase text-3xl md:text-8xl md:pb-10 font-thin ">exhibition</h2>
+        <div class="row-span-2 h-full flex items-center justify-center border-r mr-20">
+          <h2 class="md:rotate-270 uppercase text-3xl md:text-8xl md:pb-10 font-thin text-gray-400">exhibition</h2>
         </div>
         <div class="self-center flex flex-col">
           <img src="assets/blur_person.png" alt="" class="rounded-md border border-slate-200 p-1 shadow-lg ">
