functionality of modal working on exhibition page

--- a/artists.html
+++ b/artists.html
@@ -20,13 +20,16 @@
       </ul>
       <h2 class="text-yellow-950 font-extralight px-5 uppercase text-2xl">art echo</h2>
     </nav>
-    <section id="artist-gallery" class="flex flex-col">
-      <div class="w-10/12 mx-auto md:mb-10">
-        <h2 class="uppercase text-3xl md:text-8xl font-thin text-gray-400">artists</h2>
+    <section class="flex flex-col md:flex-row md:justify-between">
+      <div class="flex items-start justify-center  md:border-r mr-2 md:pt-40 md:w-1/12">
+        <h2 class="md:rotate-270 uppercase text-3xl md:text-8xl font-extralight md:font-thin text-gray-500 md:pr-20">artists</h2>
+      </div>
+      <div id="artist-gallery" class="grow">
+
       </div>
 
     </section>
   </div>
-    <script src="artists.js" type="module"></script>
+    <script src="artists.js"></script>
 </body>
 </html>
