adjusted the gris to work better on smaller screens

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
   <div class="container w-11/12 mx-auto">
     <nav class="border-b flex flex-col-reverse md:flex-row items-center justify-between mb-10">
       <ul class="flex text-yellow-950">
-        <li class="font-extralight px-5 uppercase cursor-pointer hover:underline"><a href="#">Exhibition</a></li>
-        <li class="font-extralight px-5 uppercase cursor-pointer hover:underline">life</li>
-        <li class="font-extralight px-5 uppercase cursor-pointer hover:underline"><a href="artists.html">artists</a></li>
+        <li class="nav-items"><a href="#">Exhibition</a></li>
+        <li class="nav-items">life</li>
+        <li class="nav-items"><a href="artists.html">artists</a></li>
       </ul>
       <h2 class="text-yellow-950 font-extralight px-5 uppercase text-2xl">art echo</h2>
     </nav>
     
     <section class="overflow-x-auto md:overflow-x-scroll md:overflow-y-hidden py-4 px-2 no-scrollbar" id="exhibition-gallery-outer">
-      <div class="grid gap-2 md:grid-cols-[repeat(11,minmax(250px,1fr))] md:grid-rows-[320px_320px] md:w-[200%] items-start" id="exhibition-gallery">
+      <div class="grid gap-2 md:grid-cols-[repeat(11,minmax(250px,1fr))] md:grid-rows-[minmax(200px,34vh)_minmax(200px,34vh)] md:w-[200%] items-start" id="exhibition-gallery">
         <div class="row-span-2 h-full flex items-center justify-center md:border-r md:mr-20">
           <h2 class="md:rotate-270 uppercase text-3xl md:text-8xl md:pb-10 font-extralight md:font-thin text-gray-500">exhibition</h2>
         </div>
@@ -34,9 +34,11 @@
       <p class="uppercase font-extralight ">art echo &copy;2025</p>
     </footer>
   </div>
-  <div id="modal" class="z-20 w-full h-full fixed top-0 left-0 hidden bg-[rgba(0,0,0,.7)] justify-center items-center flex-col">
+  <div id="modal" class="z-20 w-full h-full fixed top-0 left-0 hidden bg-[rgba(100,100,100,.9)] justify-center items-center flex-col">
     <div class="text-4xl p-4 top-0 md:top-20 md:right-20 absolute text-slate-100 cursor-pointer" id="modal-close">X</div>
-    <div id="modal-content" class="w-11/12 md:w-8/12 bg-slate-100 max-w-[700px] mt-10"></div>
+    <div id="modal-content" class="w-11/12 md:w-8/12 bg-slate-100 max-w-[700px] mt-10">
+      <!-- data added from app.js -->
+    </div>
   </div>
     <script src="app.js"></script>
 </body>
