fixed Artist title

--- a/artists.html
+++ b/artists.html
@@ -21,14 +21,17 @@
       <h2 class="text-yellow-950 font-extralight px-5 uppercase text-2xl">art echo</h2>
     </nav>
     <section class="flex flex-col md:flex-row md:justify-between">
-      <div class="flex items-start justify-center  md:border-r mr-2 md:pt-40 md:w-1/12">
+      <div class="flex items-start justify-center  md:border-r mr-2 md:pt-20 md:w-1/12 md:fixed md:h-[650px]">
         <h2 class="md:rotate-270 uppercase text-3xl md:text-8xl font-extralight md:font-thin text-gray-500 md:pr-20">artists</h2>
       </div>
-      <div id="artist-gallery" class="grow">
+      <div id="artist-gallery" class="grow md:ml-40">
 
       </div>
 
     </section>
+    <footer class="border-t flex justify-center mt-8 pt-2">
+      <p class="uppercase font-extralight ">art echo &copy;2025</p>
+    </footer>
   </div>
     <script src="artists.js"></script>
 </body>
