--- a/artists.html
+++ b/artists.html
@@ -14,15 +14,15 @@
   <div class="container w-11/12 mx-auto">
     <nav class="border-b flex flex-col-reverse md:flex-row items-center justify-between mb-10 md:mb-20">
       <ul class="flex text-yellow-950">
-        <li class="font-extralight px-5 uppercase cursor-pointer hover:underline"><a href="index.html">Exhibition</a></li>
-        <li class="font-extralight px-5 uppercase cursor-pointer hover:underline">life</li>
-        <li class="font-extralight px-5 uppercase cursor-pointer hover:underline"><a href="#">artists</a></li>
+        <li class="nav-items"><a href="index.html">Exhibition</a></li>
+        <li class="nav-items"><a href="life.html">life</a></li>
+        <li class="nav-items"><a href="#">artists</a></li>
       </ul>
       <h2 class="text-yellow-950 font-extralight px-5 uppercase text-2xl">art echo</h2>
     </nav>
     <section class="flex flex-col md:flex-row md:justify-between">
-      <div class="flex items-start justify-center  md:border-r mr-2 md:pt-20 md:w-1/12 md:fixed md:h-[650px]">
-        <h2 class="md:rotate-270 uppercase text-3xl md:text-8xl font-extralight md:font-thin text-gray-500 md:pr-20">artists</h2>
+      <div class="flex items-start justify-center  md:border-r mr-2 md:pt-20 md:w-1/12 md:fixed md:h-[550px]">
+        <h2 class="md:rotate-270 uppercase text-3xl md:text-8xl font-extralight md:font-thin text-yellow-900 md:pr-20">artists</h2>
       </div>
       <div id="artist-gallery" class="grow md:ml-40">
 
