--- a/life.html
+++ b/life.html
@@ -8,20 +8,66 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="output.css">
 
-    <title>Document</title>
+    <title>ART ECHO - ARTISTS</title>
 </head>
-<body class="bg-slate-50 flex p-10 font-poppins flex-col">
-  <nav class="border-b flex justify-between w-11/12 mx-auto">
-    <ul class="flex text-yellow-950">
-      <li class="font-extralight px-5 uppercase cursor-pointer hover:underline">Exhibition</li>
-      <li class="font-extralight px-5 uppercase cursor-pointer hover:underline">life</li>
-      <li class="font-extralight px-5 uppercase cursor-pointer hover:underline">artists</li>
-    </ul>
-    <h2 class="text-yellow-950 font-extralight px-5 uppercase text-2xl">art echo</h2>
-  </nav>
-  <section class="flex gap-20 items-start">
+<body class="bg-slate-100 flex p-10 font-poppins flex-col">
+  <div class="container w-11/12 mx-auto">
+    <nav class="border-b flex flex-col-reverse md:flex-row items-center justify-between mb-10 md:mb-20">
+      <ul class="flex text-yellow-950">
+        <li class="nav-items"><a href="index.html">Exhibition</a></li>
+        <li class="nav-items"><a href="#">life</a></li>
+        <li class="nav-items"><a href="artists.html">artists</a></li>
+      </ul>
+      <h2 class="text-yellow-950 font-extralight px-5 uppercase text-2xl">art echo</h2>
+    </nav>
+    <section class="flex flex-col md:flex-row md:justify-between">
+      <div class="flex items-start justify-center  md:border-r mr-2 md:w-1/12 md:fixed md:h-[550px]">
+        <h2 class="md:rotate-270 uppercase text-3xl md:text-8xl font-extralight md:font-thin text-yellow-900 md:pr-20">life</h2>
+      </div>
+      <div class="grow md:ml-40">
+        <article class="border-b border-b-slate-200 p-6">
+            <h3 class="text-3xl text-yellow-900 font-extralight mb-2">Shadows and Light – The Abstract Vision of Elias Hartman</h3>
+            <p class="blog-dates">04/01/2025</p>
 
-  </section>
-    <!-- <script src="app.js"></script> -->
+            <p class="blog-paragrapghs">Art Echo Gallery is proud to announce its upcoming photography exhibition featuring the evocative works of Elias Hartman, a contemporary photographer celebrated for his mastery of abstract black-and-white imagery. Titled *Shadows and Light*, the exhibition will run from March 15th to May 10th, offering visitors a captivating journey through Hartman’s unique visual language.</p>
+
+            <p class="blog-paragrapghs">Elias Hartman has spent the last decade pushing the boundaries of monochrome photography, using texture, contrast, and composition to create images that challenge perception. His work is an exploration of light’s interplay with structure, often transforming everyday urban landscapes into surreal, dreamlike scenes. By removing color from the equation, Hartman invites viewers to engage with form and emotion in a raw and profound way.</p>
+
+            <p class="blog-paragrapghs">The *Shadows and Light* exhibition will feature over 30 of Hartman’s most striking pieces, including never-before-seen works from his recent travels through industrial and architectural spaces. His ability to extract beauty from shadow and texture has earned him international recognition, with exhibitions in Berlin, New York, and Tokyo. Art Echo Gallery is honored to be the latest institution to showcase his extraordinary talent.</p>
+
+            <p class="blog-paragrapghs">Visitors can expect a mesmerizing experience as they navigate Hartman’s world of sharp contrasts and soft gradients. The artist himself describes his work as “a dance between reality and illusion, where light carves out meaning in an otherwise ambiguous space.” His images frequently blur the line between photography and painting, with grainy textures and high-contrast compositions evoking a sense of movement and depth.</p>
+
+            <p class="blog-paragrapghs">To celebrate the opening of *Shadows and Light*, Art Echo Gallery will host an exclusive artist talk and reception on March 16th. Guests will have the opportunity to hear from Hartman himself as he discusses his creative process, inspirations, and the philosophy behind his abstract approach. A limited-edition print series will also be available for purchase.</p>
+
+            <p class="blog-paragrapghs">For those with an appreciation for the power of monochrome photography, *Shadows and Light* promises to be an unmissable event. Mark your calendars and prepare to be immersed in the evocative world of Elias Hartman’s vision.</p>
+
+      </article>
+      <article class="p-6">
+          <h3 class="text-3xl text-yellow-900 font-extralight mb-2">Art Echo Welcomes New Artist-in-Residence, Naomi Veras</h3>
+          <p class="blog-dates">15/12/2024</p>
+
+          <p class="blog-paragrapghs">Art Echo Gallery is thrilled to introduce Naomi Veras as its newest artist-in-residence for 2025. Known for her innovative approach to mixed media and installation art, Veras brings a fresh perspective to the gallery’s creative community. Her residency, which spans six months, will see her developing new works inspired by the themes of memory, space, and transformation.</p>
+
+          <p class="blog-paragrapghs">Originally from São Paulo, Brazil, Naomi Veras has made a name for herself in the contemporary art scene with her thought-provoking installations that combine photography, sculpture, and digital media. Her work often explores the intersection of past and present, drawing from personal and collective histories to create immersive experiences for audiences.</p>
+
+          <p class="blog-paragrapghs">During her residency at Art Echo, Veras will be working on a new series titled *Ephemeral Echoes*, which investigates the transient nature of human experiences. Using found objects, projected imagery, and sculptural elements, she aims to craft a dialogue between materiality and memory. Visitors to the gallery will have the unique opportunity to witness the evolution of her work through open studio sessions and interactive workshops.</p>
+
+          <p class="blog-paragrapghs">“Art is a way of capturing fleeting moments and making them tangible,” says Veras. “With *Ephemeral Echoes*, I want to invite people to reflect on how memories shape our perception of the world and how art can act as a vessel for those memories.”</p>
+
+          <p class="blog-paragrapghs">As part of her residency, Veras will also be hosting a series of community engagement events, including artist talks, collaborative projects, and panel discussions on the role of art in storytelling. These events will provide art enthusiasts and aspiring creators with insight into her techniques and creative philosophy.</p>
+
+          <p class="blog-paragrapghs">The culmination of Naomi Veras’s residency will be a solo exhibition at Art Echo Gallery in October, where she will unveil the full body of work developed during her time in residence. This exhibition is expected to be an exciting showcase of her innovative approach, blending multiple disciplines into a cohesive narrative that speaks to the impermanence of life and art itself.</p>
+
+          <p class="blog-paragrapghs">Art Echo Gallery is excited to support Naomi Veras on this journey and looks forward to sharing her vision with the public. Be sure to follow our updates and visit the gallery to witness this incredible artist in action.</p>
+
+
+        </article>
+      </div>
+
+    </section>
+    <footer class="border-t flex justify-center mt-8 pt-2">
+      <p class="uppercase font-extralight ">art echo &copy;2025</p>
+    </footer>
+  </div>
 </body>
 </html>
