fixed exhibition heading on exhibition page

--- a/artists.html
+++ b/artists.html
@@ -29,7 +29,7 @@
       </div>
 
     </section>
-    <footer class="border-t flex justify-center mt-8 pt-2">
+    <footer class="border-t flex justify-center mt-8 pt-2 h-20">
       <p class="uppercase font-extralight ">art echo &copy;2025</p>
     </footer>
   </div>
