--- a/life.html
+++ b/life.html
@@ -25,7 +25,7 @@
         <h2 class="md:rotate-270 uppercase text-3xl md:text-8xl font-extralight md:font-thin text-yellow-900 md:pr-20">life</h2>
       </div>
       <div class="grow md:ml-40">
-        <article class="border-b border-b-slate-200 p-6">
+        <article class="border-b border-b-slate-300 p-6">
             <h3 class="text-3xl text-yellow-900 font-extralight mb-2">Shadows and Light – The Abstract Vision of Elias Hartman</h3>
             <p class="blog-dates">04/01/2025</p>
 
@@ -65,7 +65,7 @@
       </div>
 
     </section>
-    <footer class="border-t flex justify-center mt-8 pt-2">
+    <footer class="border-t flex justify-center mt-8 pt- h-20">
       <p class="uppercase font-extralight ">art echo &copy;2025</p>
     </footer>
   </div>
