--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </ul>
       <h2 class="text-yellow-950 font-extralight px-5 uppercase text-2xl">art echo</h2>
     </nav>
-    <div class="flex items-start justify-center md:border-r mr-2 md:w-1/12 md:absolute md:h-[690px] bg-slate-100 z-10 md:pt-50 md:mb-32">
+    <div class="flex items-start justify-center md:border-r mr-2 md:w-1/12 md:absolute md:h-[650px] bg-slate-100 z-10 md:pt-36 md:mt-2">
       <h2 class="md:rotate-270 uppercase text-3xl md:text-8xl font-extralight md:font-thin text-yellow-900 md:pr-24 ">exhibition</h2>
     </div>
     
