updated Life page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </ul>
       <h2 class="text-yellow-950 font-extralight px-5 uppercase text-2xl">art echo</h2>
     </nav>
-    <div class="mr-2 md:pr-1 md:w-1/12 md:absolute md:h-[700px] bg-slate-100 z-10" id="header-container">
+    <div class="mr-2 md:pr-[1px] md:w-1/12 md:absolute md:h-[700px] bg-slate-100 z-10" id="header-container">
       <div class="flex items-start justify-center md:border-r md:h-[550px] md:mt-10">
         <h2 class="md:rotate-270 uppercase text-3xl md:text-8xl font-extralight md:font-thin text-yellow-900 md:pr-96 ">exhibition</h2>
       </div>
