--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
     
     <section class="overflow-x-auto md:overflow-x-scroll md:overflow-y-hidden py-4 px-2 no-scrollbar" id="exhibition-gallery-outer">
-      <div class="grid gap-8 md:grid-cols-[repeat(10,minmax(250px,1fr))] md:grid-rows-[minmax(200px,34vh)_minmax(200px,34vh)] md:w-[200%] items-start md:ml-40" id="exhibition-gallery">
+      <div class="grid gap-6 pb-4 md:grid-cols-[repeat(10,minmax(250px,1fr))] md:grid-rows-[minmax(200px,34vh)_minmax(200px,35vh)] md:w-[200%] items-start md:ml-40" id="exhibition-gallery">
         <!-- <div class="row-span-2 h-full flex items-start justify-center md:border-r md:mr-20 md:pt-40">
           <h2 class="md:rotate-270 uppercase text-3xl md:text-8xl md:pb-10 font-extralight md:font-thin text-yellow-900">exhibition</h2>
         </div> -->
@@ -35,7 +35,7 @@
       </div>
     </section>
     
-    <footer class="border-t flex justify-center mt-8 pt-2 z-20 h-20">
+    <footer class="border-t flex justify-center mt-6 pt-2 h-4">
       <p class="uppercase font-extralight ">art echo &copy;2025</p>
     </footer>
   </div>
