--- a/life.html
+++ b/life.html
@@ -65,7 +65,7 @@
       </div>
 
     </section>
-    <footer class="border-t flex justify-center mt-8 pt- h-20">
+    <footer class="border-t flex justify-center mt-6 pt-2 h-4">
       <p class="uppercase font-extralight ">art echo &copy;2025</p>
     </footer>
   </div>
